apps/goatlint/src/snapshots/fixtures__cli__import-cycle_--import-plugin -D import__no-cycle@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin -D import/no-cycle
working directory: fixtures/cli/import-cycle
----------

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[a.ts:1:19]
 1 | import { B } from "./b";
   :                   ^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./b (fixtures/cli/import-cycle/b.ts)
           │         ⬇ imports
           │    ./a (fixtures/cli/import-cycle/a.ts)
           ╰─────────╯ imports the current file

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[b.ts:1:19]
 1 | import { A } from "./a";
   :                   ^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./a (fixtures/cli/import-cycle/a.ts)
           │         ⬇ imports
           │    ./b (fixtures/cli/import-cycle/b.ts)
           ╰─────────╯ imports the current file

Found 0 warnings and 2 errors.
Finished in <variable>ms on 2 files with 129 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
